# src/openapi_server/db.py
@@ -1,6 +1,7 @@
 from flask import g
 
 from wrappers.cobs import Cobs
+from wrappers.variant_search import VariantSearch
 
 
 def get_cobs():
@@ -8,6 +9,13 @@ def get_cobs():
         g.cobs = Cobs()
 
     return g.cobs
+
+
+def get_variant_searcher():
+    if 'vs' not in g:
+        g.vs = VariantSearch(get_cobs())
+
+    return g.vs
 
 
 def close_db():
