# src/openapi_server/models/variant_search_results.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.variant_search_result import VariantSearchResult
+from openapi_server import util
+
+from openapi_server.models.variant_search_result import VariantSearchResult  # noqa: E501
+
+class VariantSearchResults(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, query=None, results=None):  # noqa: E501
+        """VariantSearchResults - a model defined in OpenAPI
+
+        :param query: The query of this VariantSearchResults.  # noqa: E501
+        :type query: str
+        :param results: The results of this VariantSearchResults.  # noqa: E501
+        :type results: List[VariantSearchResult]
+        """
+        self.openapi_types = {
+            'query': str,
+            'results': List[VariantSearchResult]
+        }
+
+        self.attribute_map = {
+            'query': 'query',
+            'results': 'results'
+        }
+
+        self._query = query
+        self._results = results
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'VariantSearchResults':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The VariantSearchResults of this VariantSearchResults.  # noqa: E501
+        :rtype: VariantSearchResults
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def query(self):
+        """Gets the query of this VariantSearchResults.
+
+
+        :return: The query of this VariantSearchResults.
+        :rtype: str
+        """
+        return self._query
+
+    @query.setter
+    def query(self, query):
+        """Sets the query of this VariantSearchResults.
+
+
+        :param query: The query of this VariantSearchResults.
+        :type query: str
+        """
+
+        self._query = query
+
+    @property
+    def results(self):
+        """Gets the results of this VariantSearchResults.
+
+
+        :return: The results of this VariantSearchResults.
+        :rtype: List[VariantSearchResult]
+        """
+        return self._results
+
+    @results.setter
+    def results(self, results):
+        """Sets the results of this VariantSearchResults.
+
+
+        :param results: The results of this VariantSearchResults.
+        :type results: List[VariantSearchResult]
+        """
+
+        self._results = results
